fixed sticky nav on mobile

--- a/atoms/default/client/css/_theme2021.scss
+++ b/atoms/default/client/css/_theme2021.scss
@@ -43,7 +43,6 @@ $secondaryColor: $culture800;
   [data-gu-name="headline"],
   [data-gu-name="standfirst"],
   [data-gu-name="meta"],
-  .article-navigation,
   .section-header,
   .byline-box {
     margin: 0 -10px;
